--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <body>  	
 
 	    <header>
+	    	<!-- menú -->
 	      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	      <div class="container">
 	        <a class="navbar-brand" href="http://nubecolectiva.com"><img src="http://nubecolectiva.com/img/logo.png" class="img-fluid"></a>
